--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_searchMovies_fragment">Hello Search fragment</string>
+    <string name="hello_registeredMovies_fragment">Hello Registered fragment</string>
 </resources>
