implementação tela de filmes cadastrados

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,9 @@
     <string name="hello_registeredMovies_fragment">Hello Registered fragment</string>
 
     <string name="texto_nomeFilme">Digite o nome do filme...</string>
-    <string name="meusFilmes">MEUS FILMES</string>
+    <string name="botaoBuscaFilme">Buscar Filme</string>
+    <string name="meus_filmes">MEUS FILMES</string>
+
     <string name="strFilmes">Quantidade de filmes cadastrados: </string>
     <string name="title_activity_movie">Movie</string>
     <string name="resumoFilme">Resumo do Filme</string>
